# OmniQueryBot

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  web_app.py
data/knowledge_base/: api_debugging.md  docker_basics.md  fastapi_local_testing.md  git_workflow.md  python_virtual_envs.md  telegram_bot_operations.md
scripts/: reindex.py
src/omniquery_bot/: bot.py  config.py  genai_client.py  knowledge_base.py  llm_service.py  rag_service.py  vision_service.py  web_app.py
tests/: test_bot.py  test_knowledge_base.py  test_llm_service.py  test_web_app.py
web/: app.js  index.html  styles.css
